--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
         <span id="circle_1"><img src="Logo.png"></span>
         <span id="circle_2"></span>
         <span id="circle_3"></span>
-        <h1>Frog Facts</h1>
         <div>
+            <h1>Frog Facts</h1>
+            <div id="line"></div>
+        </div>
         <nav>
             <ul>
                 <li><a>Strona Główna</a></li>
