--- a/index.html
+++ b/index.html
@@ -11,10 +11,8 @@
         <span id="circle_1"><img src="Logo.png"></span>
         <span id="circle_2"></span>
         <span id="circle_3"></span>
-        <div>
-            <h1>Frog Facts</h1>
-            <div id="line"></div>
-        </div>
+        <h1>Frog Facts</h1>
+        <div id="line"></div>
         <nav>
             <ul>
                 <li><a>Strona Główna</a></li>
@@ -28,7 +26,12 @@
 
     </aside>
     <main>
-
+        <article></article>
+        <img src="placeholder.png">
+        <img src="placeholder.png">
+        <article></article>
+        <article></article>
+        <img src="placeholder.png">
     </main>
     <footer>
 
