--- a/Main/main.html
+++ b/Main/main.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="author" content="Dawid Zyś">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="main.css">
     <title>Frog Site</title>
 </head>
 <body>
@@ -15,10 +15,10 @@
         <div id="line"></div>
         <nav>
             <ul>
-                <li><a>Strona Główna</a></li>
-                <li><a>Galeria</a></li>
-                <li><a>Hodowla</a></li>
-                <li><a>Zajęcia online</a></li>
+                <li><a href="main.html">Strona Główna</a></li>
+                <li><a href="../Gallery/gallery.html">Galeria</a></li>
+                <li><a href="../Terrarium/terrarium.html">Hodowla</a></li>
+                <li><a href="../Online/online.html">Zajęcia online</a></li>
             </ul>
         </nav>
     </header>
