Aside update and massive changes

--- a/Online/online.html
+++ b/Online/online.html
@@ -12,7 +12,7 @@
         <span id="circle_2"></span>
         <span id="circle_3"></span>
         <h1>Frog Facts</h1>
-        <div id="line"></div>
+        <div class="vertical_line"></div>
         <nav>
             <ul>
                 <li><a href="../Main/main.html">Strona Główna</a></li>
@@ -23,7 +23,12 @@
         </nav>
     </header>
     <aside>
-
+        <article>
+            <h3>Zajawka 1</h3>
+            <div class="horizontal_line"></div>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat porro necessitatibus hic facilis mollitia accusamus doloribus in. Veritatis est dolor, fuga mollitia omnis nisi nostrum impedit, explicabo natus velit, eos ex? Officiis, maiores quia corrupti adipisci rerum accusamus magni non, accusantium dolorum minus delectus saepe rem quisquam vel veniam molestias?</p>
+        </article>
+        <img src="imgs/placeholder.png">
     </aside>
     <main>
 
