--- a/Gallery/gallery.html
+++ b/Gallery/gallery.html
@@ -12,7 +12,7 @@
         <span id="circle_2"></span>
         <span id="circle_3"></span>
         <h1>Frog Facts</h1>
-        <div id="line"></div>
+        <div class="vertical_line"></div>
         <nav>
             <ul>
                 <li><a href="../Main/main.html">Strona Główna</a></li>
@@ -22,11 +22,8 @@
             </ul>
         </nav>
     </header>
-    <aside>
-
-    </aside>
     <main>
-
+        
     </main>
     <footer>
         <p>Frog Facts &copy;</p>
