--- a/Main/main.html
+++ b/Main/main.html
@@ -12,7 +12,7 @@
         <span id="circle_2"></span>
         <span id="circle_3"></span>
         <h1>Frog Facts</h1>
-        <div id="line"></div>
+        <div class="vertical_line"></div>
         <nav>
             <ul>
                 <li><a href="main.html">Strona Główna</a></li>
@@ -23,7 +23,17 @@
         </nav>
     </header>
     <aside>
-
+        <article>
+            <h3>Zajawka 1</h3>
+            <div class="horizontal_line"></div>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat porro necessitatibus hic facilis mollitia accusamus doloribus in. Veritatis est dolor, fuga mollitia omnis nisi nostrum impedit, explicabo natus velit, eos ex? Officiis, maiores quia corrupti adipisci rerum accusamus magni non, accusantium dolorum minus delectus saepe rem quisquam vel veniam molestias?</p>
+        </article>
+        <img src="imgs/placeholder.png">
+        <article>
+            <h3>Zajawka 2</h3>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ea nisi, molestias eos quae non soluta aliquid tempora voluptatem laboriosam explicabo accusamus ad? Cupiditate, ad ullam? Modi, nihil assumenda quos esse at, laudantium excepturi voluptatem voluptate, blanditiis laborum voluptas magnam maxime sequi provident eveniet doloribus aliquam quis! Necessitatibus tempora nam ratione.</p>
+        </article>
+        <img src="imgs/placeholder.png">
     </aside>
     <main>
         <h1>Nagłówek</h1>
