Minor responsivity update

--- a/Main/main.html
+++ b/Main/main.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pl">
 <head>
     <meta charset="UTF-8">
     <meta name="author" content="Dawid Zyś">
@@ -31,6 +31,7 @@
         <img src="imgs/placeholder.png">
         <article>
             <h3>Zajawka 2</h3>
+            <div class="horizontal_line"></div>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ea nisi, molestias eos quae non soluta aliquid tempora voluptatem laboriosam explicabo accusamus ad? Cupiditate, ad ullam? Modi, nihil assumenda quos esse at, laudantium excepturi voluptatem voluptate, blanditiis laborum voluptas magnam maxime sequi provident eveniet doloribus aliquam quis! Necessitatibus tempora nam ratione.</p>
         </article>
         <img src="imgs/placeholder.png">
