--- a/Gallery/gallery.html
+++ b/Gallery/gallery.html
@@ -23,15 +23,15 @@
         </nav>
     </header>
     <main>
-        <img id="img_1" src="imgs/zaba_1.png"></img>
-        <img id="img_2" src="imgs/zaba_2.png"></img>
-        <img id="img_3" src="imgs/zaba_3.png"></img>
-        <img id="img_4" src="imgs/zaba_4.png"></img>
-        <img id="img_5" src="imgs/zaba_5.png"></img>
-        <img id="img_6" src="imgs/zaba_6.png"></img>
-        <img id="img_7" src="imgs/zaba_7.png"></img>
-        <img id="img_8" src="imgs/zaba_8.png"></img>
-        <img id="img_9" src="imgs/zaba_9.png"></img>
+        <img src="imgs/zaba_1.png"></img>
+        <img src="imgs/zaba_2.png"></img>
+        <img src="imgs/zaba_3.png"></img>
+        <img src="imgs/zaba_4.png"></img>
+        <img src="imgs/zaba_5.png"></img>
+        <img src="imgs/zaba_6.png"></img>
+        <img src="imgs/zaba_7.png"></img>
+        <img src="imgs/zaba_8.png"></img>
+        <img src="imgs/zaba_9.png"></img>
     </main>
     <footer>
         <p>Frog Facts &copy;</p>
