--- a/Terrarium/terrarium.html
+++ b/Terrarium/terrarium.html
@@ -31,7 +31,13 @@
         <img src="imgs/placeholder.png">
     </aside>
     <main>
-
+        <h1>Hodowla</h1>
+        <article>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vel, ipsam. Similique, labore quis distinctio quae laudantium autem ea, obcaecati ipsum earum, asperiores nostrum aut porro! Laboriosam atque accusamus vel facere quo quasi rerum! Sed tenetur dolores fugit voluptates ad itaque beatae pariatur earum delectus qui. Sed quisquam consequatur numquam cum nesciunt dolor nostrum magnam facilis excepturi deserunt? Repellendus dolore voluptatem quasi, soluta cumque dolorum alias quod facere modi pariatur neque perspiciatis excepturi harum? Aliquam, exercitationem aperiam? Architecto quae esse possimus explicabo reprehenderit sequi unde. Eius illo iusto cumque, mollitia vero adipisci nihil impedit laboriosam qui, distinctio aliquid reiciendis, quidem fugiat!</p>
+            <p id="short">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus, dignissimos molestias ipsam, perspiciatis esse consequatur ab ipsum minus cum, nemo dolorum aliquam eum a quia laudantium vero illo saepe quae repudiandae culpa optio amet impedit mollitia reprehenderit. Qui ex similique non quaerat aperiam nisi velit consectetur tempora porro possimus fugiat, minima, quisquam dolorum alias vel? Nemo nostrum saepe aspernatur corrupti quisquam nisi modi excepturi, hic soluta, nihil magni adipisci laborum? Consequatur cum beatae at eius!</p>
+            <img src="imgs/placeholder.png">
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iusto, quibusdam atque doloremque eius facere commodi, eaque alias vitae accusantium sint, consequuntur adipisci beatae voluptate natus ad provident doloribus voluptas animi blanditiis! Fugiat magni numquam nulla expedita commodi aut aliquid officiis voluptate consectetur adipisci unde magnam nobis perferendis incidunt, voluptatum mollitia dolore, sint dicta odio fugit ullam? Maiores, laudantium aperiam iste excepturi fugiat deleniti minima a. Expedita sapiente dolorem repellendus suscipit necessitatibus atque in nisi, similique enim alias, soluta nulla ut voluptatum libero autem veritatis fugiat iusto laborum quisquam quia! Rem, a suscipit quaerat dolor nisi aperiam cumque assumenda ratione repellendus.</p>
+        </article>
     </main>
     <footer>
         <p>Frog Facts &copy;</p>
