Online v1 and minor responsivity changes

--- a/Online/online.html
+++ b/Online/online.html
@@ -31,7 +31,14 @@
         <img src="imgs/placeholder.png">
     </aside>
     <main>
-
+        <h1>Zajęcia Online</h1>
+        <article>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quae sunt, recusandae eos molestias consectetur, ab, vel dolorem explicabo porro praesentium culpa. Aperiam atque odio ut? Mollitia, aut quibusdam, harum hic similique eveniet repellat odio sapiente ullam optio vel beatae. A quasi, reprehenderit, tempore similique illo est earum inventore aperiam minus temporibus repellendus possimus. Eius aliquam veritatis enim voluptatem iure, ipsam incidunt rem veniam, autem praesentium sed saepe. Distinctio fugiat neque reprehenderit velit odit, modi blanditiis dignissimos quibusdam error. Sapiente doloremque, ratione a suscipit cumque similique nulla ullam cum recusandae sed. Odio dignissimos aliquid est, aspernatur impedit dolores praesentium architecto eum.</p>
+        </article>
+        <h1>Formularz</h1>
+        <article>
+            <form></form>
+        </article>
     </main>
     <footer>
         <p>Frog Facts &copy;</p>
