Added text to main

--- a/Online/online.html
+++ b/Online/online.html
@@ -37,7 +37,9 @@
         </article>
         <h1>Formularz</h1>
         <article>
-            <form></form>
+            <form>
+                
+            </form>
         </article>
     </main>
     <footer>
