--- a/Main/main.html
+++ b/Main/main.html
@@ -24,29 +24,29 @@
     </header>
     <aside>
         <article>
-            <h3>Zajawka 1</h3>
+            <h3>Największa żaba świata</h3>
             <div class="horizontal_line"></div>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat porro necessitatibus hic facilis mollitia accusamus doloribus in. Veritatis est dolor, fuga mollitia omnis nisi nostrum impedit, explicabo natus velit, eos ex? Officiis, maiores quia corrupti adipisci rerum accusamus magni non, accusantium dolorum minus delectus saepe rem quisquam vel veniam molestias?</p>
+            <p>Trudno wyobrazić sobie żabę o wielkości zająca, ale taka właśnie jest żaba goliat. Długość ciała goliata osiąga maksymalnie 40 cm, a waga nawet 4 kg. Ten płaz jest bardzo płochliwy, przez co jest rzadko spotykany. Gatunek jest zagrożony, ponieważ posiada smaczne mięso. Z tego powodu jest objęty ochroną.</p>
         </article>
-        <img src="imgs/placeholder.png">
+        <img src="imgs/żaba_1.png">
         <article>
-            <h3>Zajawka 2</h3>
+            <h3>Najrzadsza żaba na świecie</h3>
             <div class="horizontal_line"></div>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ea nisi, molestias eos quae non soluta aliquid tempora voluptatem laboriosam explicabo accusamus ad? Cupiditate, ad ullam? Modi, nihil assumenda quos esse at, laudantium excepturi voluptatem voluptate, blanditiis laborum voluptas magnam maxime sequi provident eveniet doloribus aliquam quis! Necessitatibus tempora nam ratione.</p>
+            <p>Żaba gęborodna to bardzo ciekawa żaba. Skąd pochodzi nazwa? W żołądku samicy skrzek przechodzi całkowity rozwój. 10 lat po odkryciu, w jaki sposób ten płaz się rozmnaża, postanowiono go zbadać. Pojawiła się jednak niespodziewana przeszkoda - nie udało się znaleźć ani jednej żaby tego gatunku. Nie wiadomo co dokładnie im zaszkodziło, gdyż niedawno temu były pospolite. Zagadka pozostaje nierozwiązana do dziś.</p>
         </article>
-        <img src="imgs/placeholder.png">
+        <img src="imgs/żaba_2.png">
     </aside>
     <main>
-        <h1>Nagłówek</h1>
+        <h1>Najbardziej znane gatunki żab</h1>
         <article>
-            <h2>Tekst 1</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore, rerum saepe explicabo porro ex possimus architecto molestias sequi sapiente laboriosam tempore impedit assumenda, alias, itaque unde fugiat minima laudantium asperiores aperiam. Inventore libero eaque eos labore, ut ipsa expedita vel soluta assumenda facilis quibusdam illo perferendis laboriosam odio reiciendis tenetur maiores atque alias possimus unde repellendus veritatis cupiditate accusantium. Ea, nisi consequatur. Reiciendis, maxime laboriosam repellat fugit ratione ipsam! Commodi earum suscipit facilis sed nisi id sequi temporibus placeat ex eum voluptas dicta ipsam vitae sit similique quos ad, voluptate blanditiis non assumenda praesentium mollitia, voluptates, illum itaque. Dolorum, modi!</p>
+            <h2>Chwytnica kolorowa</h2>
+            <p>Chwytnica kolorowa, znana również jako rzekotka kolorowa, to jedna z najpiękniejszych i najbardziej charakterystycznych rzekotek. Charakteryzuje się czerwonymi oczami, niebieskimi smugami na bokach i udach oraz pomarańczowymi palcami. Jej ciało jest bardzo delikatne. Dzięki specjalnym zgrubieniom na końcach palców, potrafi przykleić się do liści. Co ciekawe może też przykleić się do przeciwnika. Jej pokarm to między innymi świerszcze, muchy i ćmy. Ciało samicy mierzy do 8 cm, a samca do 10 cm. Występuje w Ameryce Środkowej.</p>
         </article>
-        <img src="imgs/placeholder.png">
-        <img src="imgs/placeholder.png">
+        <img src="imgs/żaba_3.png">
+        <img src="imgs/żaba_4.png">
         <article>
-            <h2>Tekst 2</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui hic explicabo, eveniet rem corrupti modi maxime asperiores amet ex illum! Esse alias tempora architecto eligendi, vitae ipsum numquam nostrum sit nam voluptates deserunt soluta consectetur non sequi minus consequuntur illum, facere dignissimos? Quaerat vitae, sit voluptatibus illo neque corrupti corporis, ea natus ipsum iure dolorem nam impedit! Veritatis sequi quisquam, optio autem cupiditate odit ipsam facilis totam qui blanditiis itaque, alias eligendi ducimus deserunt commodi, hic placeat harum reiciendis! Perferendis eius sapiente impedit laboriosam ullam? Hic autem nam, molestias natus quia quis at rem id soluta vel similique adipisci obcaecati.</p>
+            <h2>Drzewołaz karłowaty</h2>
+            <p>Drzewołaz karłowaty to najmniejszy drzewołaz na świecie. Występuje w Ameryce Środkowej. Charakteryzuje się połyskującą, pomarańczowoczerwoną głową. Żywi się on głównie małymi stawonogami, takimi jak mrówki czy termity, które zbiera z powierzchni liści i gałęzi. Drzewołaz karłowaty jest bardzo agresywny i potrafi skoczyć na wroga, jeśli zostanie sprowokowany. Ciekawy jest zwyczaj tych płazów - wróg po przegranej walce może bezpiecznie odejść. Ten mały drzewołaz osiąga około 2 cm.</p>
         </article>
         <article>
             <h2>Tekst 3</h2>
