Added most of the text + responsivity updates

--- a/Main/main.html
+++ b/Main/main.html
@@ -53,8 +53,57 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti dolorem et magnam obcaecati modi, labore odio nostrum mollitia! Consequatur reprehenderit vitae voluptatum in fugiat! Voluptates, hic ab! Ducimus eius maiores veritatis vero aliquid quo, mollitia molestias voluptatum veniam exercitationem commodi! Harum odio, cumque similique ducimus nesciunt omnis inventore amet repellat cum nisi. Iste in alias dolores explicabo fugiat nam nobis. Rem neque laborum quae cupiditate illo, ullam fuga, quo voluptates aliquid, adipisci porro ad. Est, a reprehenderit. Alias quasi laborum voluptatum, eum accusamus autem illo modi natus, labore aperiam odio? Fugit repudiandae fugiat dolor vero facere cum tempore reiciendis aut!</p>
         </article>
         <img src="imgs/placeholder.png">
-        <h1>Tabela</h1>
-        <table></table>
+        <h1>Porównanie gatunków żab</h1>
+        <table>
+            <tr>
+                <th>Nazwa płaza</th>
+                <th>Długość</th>
+                <th>Waga</th>
+                <th>Występowanie</th>
+                <th>Tryb życia</th>
+                <th>Status</th>      
+            </tr>
+            <tr>
+                <td class="first">Chwytnica kolorowa</td>
+                <td>9 cm</td>
+                <td>11 g</td>
+                <td>Ameryka Środkowa</td>
+                <td>Nadrzewny, aktywny nocą</td>
+                <td>Liczny, ale liczebność maleje</td>
+            </tr>
+            <tr>
+                <td class="first">Drzewołaz karłowaty</td>
+                <td>2 cm</td>
+                <td>4 g</td>
+                <td>Ameryka Środkowa</td>
+                <td>Lądowy, aktywny w dzień</td>
+                <td>Bardzo liczny</td>
+            </tr>
+            <tr>
+                <td class="first">Kumak dalekowschodni</td>
+                <td>5 cm</td>
+                <td>56 g</td>
+                <td>Wschodnia Syberia, Korea, część Chin</td>
+                <td>Wodny, aktywny w dzień</td>
+                <td>Liczny</td>
+            </tr>
+            <tr>
+                <td class="first">Kumak górski</td>
+                <td>5 cm</td>
+                <td>35 g</td>
+                <td>Tereny górzyste Europy środkowej, zachodniej i południowej</td>
+                <td>Wodny, aktywny w dzień</td>
+                <td>Liczny</td>
+            </tr>
+            <tr>
+                <td class="first">Żaba rycząca</td>
+                <td>20 cm</td>
+                <td>900 g</td>
+                <td>Ameryka Północna</td>
+                <td>Lądowo-wodny, aktywny nocą</td>
+                <td>Liczny</td>
+            </tr>
+        </table>
     </main>
     <footer>
         <p>Frog Facts &copy;</p>
