--- a/Online/online.html
+++ b/Online/online.html
@@ -24,16 +24,16 @@
     </header>
     <aside>
         <article>
-            <h3>Zajawka 1</h3>
+            <h3>Niesamowite żaby</h3>
             <div class="horizontal_line"></div>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat porro necessitatibus hic facilis mollitia accusamus doloribus in. Veritatis est dolor, fuga mollitia omnis nisi nostrum impedit, explicabo natus velit, eos ex? Officiis, maiores quia corrupti adipisci rerum accusamus magni non, accusantium dolorum minus delectus saepe rem quisquam vel veniam molestias?</p>
+            <p>Istnieje żaba, która potrafi szybować - żaba latająca jawajska. Ciekawym płazem jest też szklana żabka, ponieważ jest przeźroczysta. Istnieje również żaba, której kijanka jest cztery razy większa od dorosłego, jest to żaba arlekin. Żaba, która pokonała jednym skokiem 169 centymetrów, to żaba leopardowa. Najgłośniejszy płaz to żaba rycząca, a najsilniej trujący płaz to liściołaz straszliwy. Trucizna liściołaza potrafi zabić 10 ludzi lub 20000 myszy!</p>
         </article>
-        <img src="imgs/placeholder.png">
+        <img src="imgs/żaba_1.png">
     </aside>
     <main>
         <h1>Zajęcia Online</h1>
         <article>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quae sunt, recusandae eos molestias consectetur, ab, vel dolorem explicabo porro praesentium culpa. Aperiam atque odio ut? Mollitia, aut quibusdam, harum hic similique eveniet repellat odio sapiente ullam optio vel beatae. A quasi, reprehenderit, tempore similique illo est earum inventore aperiam minus temporibus repellendus possimus. Eius aliquam veritatis enim voluptatem iure, ipsam incidunt rem veniam, autem praesentium sed saepe. Distinctio fugiat neque reprehenderit velit odit, modi blanditiis dignissimos quibusdam error. Sapiente doloremque, ratione a suscipit cumque similique nulla ullam cum recusandae sed. Odio dignissimos aliquid est, aspernatur impedit dolores praesentium architecto eum.</p>
+            <p>&emsp;Zajęcia online o żabach to świetny sposób na poznanie fascynującego świata tych zwierząt bez wychodzenia z domu. Podczas takich zajęć uczestnicy będą mieli możliwość nauczenia się wiele interesujących rzeczy o żabach, takich jak ich tryb życia, anatomiczne cechy, zachowania i wiele innych. Zajęcia będą prowadzone przez doświadczonych prowadzących, którzy zaprezentują wizualizacje, zdjęcia oraz filmy w celu ułatwienia zrozumienia materiału. Uczestnicy będą mieli możliwość zadawania pytań i uczestnictwa w interaktywnych dyskusjach z prowadzącymi oraz innymi uczestnikami. Podczas tych zajęć, uczestnicy będą mieli okazję poznać różnorodność gatunków żab i ich środowiska naturalne, a także zrozumieć ich rolę w ekosystemie. Będą mieli możliwość zapoznania się z najnowszymi badaniami naukowymi dotyczącymi żab i odkryć, jakie zagrożenia czyhają na te zwierzęta i jak można im pomóc.<br><br>&emsp;Jeśli jesteś zainteresowany/a udziałem w zajęciach online o żabach, zachęcamy do wypełnienia poniższego formularza zapisowego. Będziemy mieli przyjemność poinformować Cię o nadchodzących terminach i szczegółach dotyczących zajęć. Do zobaczenia na zajęciach!</p>
         </article>
         <h1>Formularz</h1>
         <article>
