--- a/Terrarium/terrarium.html
+++ b/Terrarium/terrarium.html
@@ -24,11 +24,11 @@
     </header>
     <aside>
         <article>
-            <h3>Zajawka 1</h3>
+            <h3>Żaba z długą szyją</h3>
             <div class="horizontal_line"></div>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat porro necessitatibus hic facilis mollitia accusamus doloribus in. Veritatis est dolor, fuga mollitia omnis nisi nostrum impedit, explicabo natus velit, eos ex? Officiis, maiores quia corrupti adipisci rerum accusamus magni non, accusantium dolorum minus delectus saepe rem quisquam vel veniam molestias?</p>
+            <p>Żaba zwrotnogłowa to żaba, którą wyróżnia wydłużenie fragmentu ciała łączącego tułów z głową. Dzięki temu płaz potrafi poruszać głową na boki. Takiej umiejętności nie ma żaden inny płaz bezogonowy.</p>
         </article>
-        <img src="imgs/placeholder.png">
+        <img src="imgs/żaba_1.png">
     </aside>
     <main>
         <h1>Hodowla</h1>
