Added more text and form + responsivity changes

--- a/Main/main.html
+++ b/Main/main.html
@@ -49,10 +49,10 @@
             <p>Drzewołaz karłowaty to najmniejszy drzewołaz na świecie. Występuje w Ameryce Środkowej. Charakteryzuje się połyskującą, pomarańczowoczerwoną głową. Żywi się on głównie małymi stawonogami, takimi jak mrówki czy termity, które zbiera z powierzchni liści i gałęzi. Drzewołaz karłowaty jest bardzo agresywny i potrafi skoczyć na wroga, jeśli zostanie sprowokowany. Ciekawy jest zwyczaj tych płazów - wróg po przegranej walce może bezpiecznie odejść. Ten mały drzewołaz osiąga około 2 cm.</p>
         </article>
         <article>
-            <h2>Tekst 3</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti dolorem et magnam obcaecati modi, labore odio nostrum mollitia! Consequatur reprehenderit vitae voluptatum in fugiat! Voluptates, hic ab! Ducimus eius maiores veritatis vero aliquid quo, mollitia molestias voluptatum veniam exercitationem commodi! Harum odio, cumque similique ducimus nesciunt omnis inventore amet repellat cum nisi. Iste in alias dolores explicabo fugiat nam nobis. Rem neque laborum quae cupiditate illo, ullam fuga, quo voluptates aliquid, adipisci porro ad. Est, a reprehenderit. Alias quasi laborum voluptatum, eum accusamus autem illo modi natus, labore aperiam odio? Fugit repudiandae fugiat dolor vero facere cum tempore reiciendis aut!</p>
+            <h2>Kumak dalekowschodni</h2>
+            <p>Kumak dalekowschodni jest znany między innymi dzięki jego ciekawej kolorystyce. Posiada on jaskrawy brzuch, który pokazuję przeciwnikowi, aby go poinformować, że jest trujący. To zachowanie znane jest jako odruch kumaka. Płaz ten posiada także wzór na plecach, który służy jako kamuflaż. Zamieszkuje on tereny wschodniej Syberii, Korei i północno-wschodnich Chin. Żyje w wodzie, najczęściej w nizinnych rzekach. Nietypowe jest to, że jego język nie wyciąga się tak jak u innych żab i kumaków oraz to, że jego długość życia osiąga aż 20 lat.</p>
         </article>
-        <img src="imgs/placeholder.png">
+        <img src="imgs/żaba_5.png">
         <h1>Porównanie gatunków żab</h1>
         <table>
             <tr>
