Text content fix

--- a/Main/main.html
+++ b/Main/main.html
@@ -40,7 +40,7 @@
         <h1>Najbardziej znane gatunki żab</h1>
         <article>
             <h2>Chwytnica kolorowa</h2>
-            <p>Chwytnica kolorowa, znana również jako rzekotka kolorowa, to jedna z najpiękniejszych i najbardziej charakterystycznych rzekotek. Charakteryzuje się czerwonymi oczami, niebieskimi smugami na bokach i udach oraz pomarańczowymi palcami. Jej ciało jest bardzo delikatne. Dzięki specjalnym zgrubieniom na końcach palców, potrafi przykleić się do liści. Co ciekawe może też przykleić się do przeciwnika. Jej pokarm to między innymi świerszcze, muchy i ćmy. Ciało samicy mierzy do 8 cm, a samca do 10 cm. Występuje w Ameryce Środkowej.</p>
+            <p>Chwytnica kolorowa, znana również jako rzekotka czerwonooka, to jedna z najpiękniejszych i najbardziej charakterystycznych rzekotek. Charakteryzuje się czerwonymi oczami, niebieskimi smugami na bokach i udach oraz pomarańczowymi palcami. Jej ciało jest bardzo delikatne. Dzięki specjalnym zgrubieniom na końcach palców, potrafi przykleić się do liści. Co ciekawe może też przykleić się do przeciwnika. Jej pokarm to między innymi świerszcze, muchy i ćmy. Ciało samicy mierzy do 8 cm, a samca do 10 cm. Występuje w Ameryce Środkowej.</p>
         </article>
         <img src="imgs/żaba_3.png">
         <img src="imgs/żaba_4.png">
