Site names changed + icon added

--- a/Online/online.html
+++ b/Online/online.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="author" content="Dawid Zyś">
     <link rel="stylesheet" href="online.css">
-    <title>Frog Site</title>
+    <title>Frog Site | Zajęcia Online</title>
+    <link rel="icon" href="imgs/icon.png">
 </head>
 <body>
     <header>  
