--- a/Terrarium/terrarium.html
+++ b/Terrarium/terrarium.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="author" content="Dawid Zyś">
     <link rel="stylesheet" href="terrarium.css">
-    <title>Frog Site</title>
+    <title>Frog Site | Hodowla</title>
+    <link rel="icon" href="imgs/icon.png">
 </head>
 <body>
     <header>  
