--- a/Gallery/gallery.html
+++ b/Gallery/gallery.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="author" content="Dawid Zyś">
     <link rel="stylesheet" href="gallery.css">
-    <title>Frog Site | Galeria</title>
+    <title>Frog Facts | Galeria</title>
     <link rel="icon" href="imgs/icon.png">
 </head>
 <body>
