--- a/Online/online.html
+++ b/Online/online.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="author" content="Dawid Zyś">
     <link rel="stylesheet" href="online.css">
-    <title>Frog Site | Zajęcia Online</title>
+    <title>Frog Facts | Zajęcia Online</title>
     <link rel="icon" href="imgs/icon.png">
 </head>
 <body>
