--- a/Main/main.html
+++ b/Main/main.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="author" content="Dawid Zyś">
     <link rel="stylesheet" href="main.css">
-    <title>Frog Site | Strona Główna</title>
+    <title>Frog Facts | Strona Główna</title>
     <link rel="icon" href="imgs/icon.png">
 </head>
 <body>
