--- a/Online/online.html
+++ b/Online/online.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>  
-        <span id="circle_1"><img src="imgs/logo.png"></span>
+        <span id="circle_1"><img src="imgs/logo.png" alt="logo"></span>
         <span id="circle_2"></span>
         <span id="circle_3"></span>
         <h1>Frog Facts</h1>
@@ -29,7 +29,7 @@
             <div class="horizontal_line"></div>
             <p>Istnieje żaba, która potrafi szybować - żaba latająca jawajska. Ciekawym płazem jest też szklana żabka, ponieważ jest przeźroczysta. Istnieje również żaba, której kijanka jest cztery razy większa od dorosłego, jest to żaba arlekin. Żaba, która pokonała jednym skokiem 169 centymetrów, to żaba leopardowa. Najgłośniejszy płaz to żaba rycząca, a najsilniej trujący płaz to liściołaz straszliwy. Trucizna liściołaza potrafi zabić 10 ludzi lub 20000 myszy!</p>
         </article>
-        <img src="imgs/żaba_1.png">
+        <img src="imgs/żaba_1.png" alt="żaba_1">
     </aside>
     <main>
         <h1>Zajęcia Online</h1>
@@ -75,7 +75,7 @@
     </main>
     <footer>
         <p>Frog Facts &copy;</p>
-        <img src="imgs/logo.png">
+        <img src="imgs/logo.png" alt="logo">
         <p>Dawid Zyś ZSTI 2023r.</p>
     </footer>
 </body>
