--- a/Gallery/gallery.html
+++ b/Gallery/gallery.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>  
-        <span id="circle_1"><img src="imgs/logo.png"></span>
+        <span id="circle_1"><img src="imgs/logo.png" alt="logo"></span>
         <span id="circle_2"></span>
         <span id="circle_3"></span>
         <h1>Frog Facts</h1>
@@ -24,19 +24,19 @@
         </nav>
     </header>
     <main>
-        <img src="imgs/zaba_1.png"></img>
-        <img src="imgs/zaba_2.png"></img>
-        <img src="imgs/zaba_3.png"></img>
-        <img src="imgs/zaba_4.png"></img>
-        <img src="imgs/zaba_5.png"></img>
-        <img src="imgs/zaba_6.png"></img>
-        <img src="imgs/zaba_7.png"></img>
-        <img src="imgs/zaba_8.png"></img>
-        <img src="imgs/zaba_9.png"></img>
+        <img src="imgs/zaba_1.png" alt="żaba_1"></img>
+        <img src="imgs/zaba_2.png" alt="żaba_2"></img>
+        <img src="imgs/zaba_3.png" alt="żaba_3"></img>
+        <img src="imgs/zaba_4.png" alt="żaba_4"></img>
+        <img src="imgs/zaba_5.png" alt="żaba_5"></img>
+        <img src="imgs/zaba_6.png" alt="żaba_6"></img>
+        <img src="imgs/zaba_7.png" alt="żaba_7"></img>
+        <img src="imgs/zaba_8.png" alt="żaba_8"></img>
+        <img src="imgs/zaba_9.png" alt="żaba_9"></img>
     </main>
     <footer>
         <p>Frog Facts &copy;</p>
-        <img src="imgs/logo.png">
+        <img src="imgs/logo.png" alt="logo">
         <p>Dawid Zyś ZSTI 2023r.</p>
     </footer>
 </body>
