--- a/Main/main.html
+++ b/Main/main.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>  
-        <span id="circle_1"><img src="imgs/logo.png"></span>
+        <span id="circle_1"><img src="imgs/logo.png" alt="logo"></span>
         <span id="circle_2"></span>
         <span id="circle_3"></span>
         <h1>Frog Facts</h1>
@@ -29,13 +29,13 @@
             <div class="horizontal_line"></div>
             <p>Trudno wyobrazić sobie żabę o wielkości zająca, ale taka właśnie jest żaba goliat. Długość ciała goliata osiąga maksymalnie 40 cm, a waga nawet 4 kg. Ten płaz jest bardzo płochliwy, przez co jest rzadko spotykany. Gatunek jest zagrożony, ponieważ posiada smaczne mięso. Z tego powodu jest objęty ochroną.</p>
         </article>
-        <img src="imgs/żaba_1.png">
+        <img src="imgs/żaba_1.png" alt="żaba_1">
         <article>
             <h3>Najrzadsza żaba na świecie</h3>
             <div class="horizontal_line"></div>
             <p>Żaba gęborodna to bardzo ciekawa żaba. Skąd pochodzi nazwa? W żołądku samicy skrzek przechodzi całkowity rozwój. 10 lat po odkryciu, w jaki sposób ten płaz się rozmnaża, postanowiono go zbadać. Pojawiła się jednak niespodziewana przeszkoda - nie udało się znaleźć ani jednej żaby tego gatunku. Nie wiadomo co dokładnie im zaszkodziło, gdyż niedawno temu były pospolite. Zagadka pozostaje nierozwiązana do dziś.</p>
         </article>
-        <img src="imgs/żaba_2.png">
+        <img src="imgs/żaba_2.png" alt="żaba_2">
     </aside>
     <main>
         <h1>Najbardziej znane gatunki żab</h1>
@@ -43,8 +43,8 @@
             <h2>Chwytnica kolorowa</h2>
             <p>Chwytnica kolorowa, znana również jako rzekotka czerwonooka, to jedna z najpiękniejszych i najbardziej charakterystycznych rzekotek. Charakteryzuje się czerwonymi oczami, niebieskimi smugami na bokach i udach oraz pomarańczowymi palcami. Jej ciało jest bardzo delikatne. Dzięki specjalnym zgrubieniom na końcach palców, potrafi przykleić się do liści. Co ciekawe może też przykleić się do przeciwnika. Jej pokarm to między innymi świerszcze, muchy i ćmy. Ciało samicy mierzy do 8 cm, a samca do 10 cm. Występuje w Ameryce Środkowej.</p>
         </article>
-        <img src="imgs/żaba_3.png">
-        <img src="imgs/żaba_4.png">
+        <img src="imgs/żaba_3.png" alt="żaba_3">
+        <img src="imgs/żaba_4.png" alt="żaba_4">
         <article>
             <h2>Drzewołaz karłowaty</h2>
             <p>Drzewołaz karłowaty to najmniejszy drzewołaz na świecie. Występuje w Ameryce Środkowej. Charakteryzuje się połyskującą, pomarańczowoczerwoną głową. Żywi się on głównie małymi stawonogami, takimi jak mrówki czy termity, które zbiera z powierzchni liści i gałęzi. Drzewołaz karłowaty jest bardzo agresywny i potrafi skoczyć na wroga, jeśli zostanie sprowokowany. Ciekawy jest zwyczaj tych płazów - wróg po przegranej walce może bezpiecznie odejść. Ten mały drzewołaz osiąga około 2 cm.</p>
@@ -53,7 +53,7 @@
             <h2>Kumak dalekowschodni</h2>
             <p>Kumak dalekowschodni jest znany między innymi dzięki jego ciekawej kolorystyce. Posiada on jaskrawy brzuch, który pokazuję przeciwnikowi, aby go poinformować, że jest trujący. To zachowanie znane jest jako odruch kumaka. Płaz ten posiada także wzór na plecach, który służy jako kamuflaż. Zamieszkuje on tereny wschodniej Syberii, Korei i północno-wschodnich Chin. Żyje w wodzie, najczęściej w nizinnych rzekach. Nietypowe jest to, że jego język nie wyciąga się tak jak u innych żab i kumaków oraz to, że jego długość życia osiąga aż 20 lat.</p>
         </article>
-        <img src="imgs/żaba_5.png">
+        <img src="imgs/żaba_5.png" alt="żaba_5">
         <h1>Porównanie gatunków żab</h1>
         <table>
             <tr>
@@ -108,7 +108,7 @@
     </main>
     <footer>
         <p>Frog Facts &copy;</p>
-        <img src="imgs/logo.png">
+        <img src="imgs/logo.png" alt="logo">
         <p>Dawid Zyś ZSTI 2023r.</p>
     </footer>
 </body>
