--- a/Gallery/gallery.html
+++ b/Gallery/gallery.html
@@ -5,15 +5,14 @@
     <meta name="author" content="Dawid Zyś">
     <link rel="stylesheet" href="gallery.css">
     <title>Frog Facts | Galeria</title>
-    <link rel="icon" href="imgs/icon.png">
+    <link rel="icon" href="imgs/logo.png">
 </head>
 <body>
-    <header>  
-        <span id="circle_1"><img src="imgs/logo.png" alt="logo"></span>
-        <span id="circle_2"></span>
-        <span id="circle_3"></span>
+    <span id="circle_1"><img src="imgs/logo.png" alt="logo"></span>
+    <span id="circle_2"></span>
+    <span id="circle_3"></span>
+    <header>
         <h1>Frog Facts</h1>
-        <div class="vertical_line"></div>
         <nav>
             <ul>
                 <li><a href="../Main/main.html">Strona Główna</a></li>
