--- a/Online/online.html
+++ b/Online/online.html
@@ -5,7 +5,7 @@
     <meta name="author" content="Dawid Zyś">
     <link rel="stylesheet" href="online.css">
     <title>Frog Facts | Zajęcia Online</title>
-    <link rel="icon" href="imgs/icon.png">
+    <link rel="icon" href="imgs/logo.png">
 </head>
 <body>
     <header>  
@@ -13,7 +13,6 @@
         <span id="circle_2"></span>
         <span id="circle_3"></span>
         <h1>Frog Facts</h1>
-        <div class="vertical_line"></div>
         <nav>
             <ul>
                 <li><a href="../Main/main.html">Strona Główna</a></li>
