--- a/Terrarium/terrarium.html
+++ b/Terrarium/terrarium.html
@@ -24,7 +24,7 @@
     </header>
     <aside>
         <article>
-            <h3>Żaba z długą szyją</h3>
+            <h3>Żaba z "szyją"</h3>
             <div class="horizontal_line"></div>
             <p>Żaba zwrotnogłowa to żaba, którą wyróżnia wydłużenie fragmentu ciała łączącego tułów z głową. Dzięki temu płaz potrafi poruszać głową na boki. Takiej umiejętności nie ma żaden inny płaz bezogonowy.</p>
         </article>
