Header looks change

--- a/Gallery/gallery.html
+++ b/Gallery/gallery.html
@@ -8,11 +8,11 @@
     <link rel="icon" href="imgs/logo.png">
 </head>
 <body>
-    <span id="circle_1"><img src="imgs/logo.png" alt="logo"></span>
-    <span id="circle_2"></span>
-    <span id="circle_3"></span>
     <header>
-        <h1>Frog Facts</h1>
+        <span id="circle_1"><img src="imgs/logo.png" alt="logo"></span>
+        <span id="circle_2"></span>
+        <span id="circle_3"></span>
+        <img src="imgs/logo_2.png" alt="logo">
         <nav>
             <ul>
                 <li><a href="../Main/main.html">Strona Główna</a></li>
