--- a/Online/online.html
+++ b/Online/online.html
@@ -12,7 +12,7 @@
         <span id="circle_1"><img src="imgs/logo.png" alt="logo"></span>
         <span id="circle_2"></span>
         <span id="circle_3"></span>
-        <h1>Frog Facts</h1>
+        <img src="imgs/logo_2.png" alt="logo">
         <nav>
             <ul>
                 <li><a href="../Main/main.html">Strona Główna</a></li>
