Even more changes

--- a/Terrarium/terrarium.html
+++ b/Terrarium/terrarium.html
@@ -24,8 +24,7 @@
     </header>
     <aside>
         <article>
-            <h3>Żaba z "szyją"</h3>
-            <div class="horizontal_line"></div>
+            <h3>Żaba z "długą szyją"</h3>
             <p>Żaba zwrotnogłowa to żaba, którą wyróżnia wydłużenie fragmentu ciała łączącego tułów z głową. Dzięki temu płaz potrafi poruszać głową na boki. Takiej umiejętności nie ma żaden inny płaz bezogonowy.</p>
         </article>
         <img src="imgs/żaba_1.png" alt="żaba_1">
