--- a/Gallery/gallery.html
+++ b/Gallery/gallery.html
@@ -32,6 +32,9 @@
         <img src="imgs/zaba_7.png" alt="żaba_7"></img>
         <img src="imgs/zaba_8.png" alt="żaba_8"></img>
         <img src="imgs/zaba_9.png" alt="żaba_9"></img>
+        <img src="imgs/zaba_10.png" alt="żaba_10"></img>
+        <img src="imgs/zaba_11.png" alt="żaba_11"></img>
+        <img src="imgs/zaba_12.png" alt="żaba_12"></img>
     </main>
     <footer>
         <p>Frog Facts &copy;</p>
